--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <h1>PruebasGIT</h1>
 <ul>
 <li>Paso 1:Inicializar el repositorio con git init</li>
+<li>Paso 2:Añadir todos los ficheros con git add</li>
+<li>Paso 4:Crear una nueva rama </li>
 </ul>
 </body>
 </html>
